#436: Added queries and object for Item Use Types