@@ -17,52 +17,83 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemUseTypeForm;
-import com.echothree.control.user.item.common.result.GetItemUseTypeResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
+import com.echothree.model.control.core.common.ComponentVendors;
+import com.echothree.model.control.core.common.EntityTypes;
+import com.echothree.model.control.core.common.EventTypes;
+import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.control.item.server.logic.ItemUseTypeLogic;
 import com.echothree.model.data.item.server.entity.ItemUseType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetItemUseTypeCommand
-        extends BaseSimpleCommand<GetItemUseTypeForm> {
-    
+        extends BaseSingleEntityCommand<ItemUseType, GetItemUseTypeForm> {
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("ItemUseTypeName", FieldType.ENTITY_NAME, false, null, null)
-        ));
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("ItemUseTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
-    
+
     /** Creates a new instance of GetItemUseTypeCommand */
     public GetItemUseTypeCommand(UserVisitPK userVisitPK, GetItemUseTypeForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected ItemUseType getEntity() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemUseTypeResult result = ItemResultFactory.getGetItemUseTypeResult();
-        String itemUseTypeName = form.getItemUseTypeName();
-        ItemUseType itemUseType = itemControl.getItemUseTypeByName(itemUseTypeName);
-        
+        ItemUseType itemUseType = null;
+        var itemUseTypeName = form.getItemUseTypeName();
+        var parameterCount = (itemUseTypeName == null ? 0 : 1) + EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
+
+        if(parameterCount == 1) {
+            if(itemUseTypeName == null) {
+                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form,
+                        ComponentVendors.ECHOTHREE.name(), EntityTypes.ItemUseType.name());
+
+                if(!hasExecutionErrors()) {
+                    itemUseType = itemControl.getItemUseTypeByEntityInstance(entityInstance);
+                }
+            } else {
+                itemUseType = ItemUseTypeLogic.getInstance().getItemUseTypeByName(this, itemUseTypeName);
+            }
+
+            if(itemUseType != null) {
+                sendEventUsingNames(itemUseType.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
+            }
+        } else {
+            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        }
+
+        return itemUseType;
+    }
+
+    @Override
+    protected BaseResult getTransfer(ItemUseType itemUseType) {
+        var itemControl = Session.getModelController(ItemControl.class);
+        var result = ItemResultFactory.getGetItemUseTypeResult();
+
         if(itemUseType != null) {
             result.setItemUseType(itemControl.getItemUseTypeTransfer(getUserVisit(), itemUseType));
-        } else {
-            addExecutionError(ExecutionErrors.UnknownItemUseTypeName.name(), itemUseTypeName);
         }
-        
-        
+
         return result;
     }
-    
+
 }
